<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gomoku＋</string>
    <string name="back">back to main menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mainmenu">main</string>
    <string name="button_offline">STANDALONE   </string>
    <string name="button_online">ONLINE</string>
    <string name="button_profile">PROFILE</string>
    <string name="button_statistics">STATISTICS</string>
    <string name="button_settings">SETTINGS</string>
    <string name="button_exit">EXIT</string>
    <string name="button_host">HOST</string>
    <string name="button_join">GUEST</string>
    <string name="button_size_small">10*10</string>
    <string name="button_size_medium">15*15</string>
    <string name="button_size_large">20*20</string>
    <string name="button_mode_offline">Player vs. Player</string>
    <string name="button_mode_ai">Player vs. AI</string>
    <string name="button_mode_online">Online</string>
    <string name="title_activity_level">level</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_board_small">Two Players</string>
    <string name="winText">Black vs. White</string>
    <string name="turnTxt">Your turn</string>
    <string name="button_start">START</string>
    <string name="title_activity_bluetooth_pair">BluetoothPair</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bt__device_list">BT_DeviceListActivity</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!--  BluetoothService -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Back to previous menu.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>

    <string name="gamerule">How games run:\nTwo players play, player vs player (same device or online), player vs AI. Player with Black stone take first turn, switch player`s turns after stone placed. In AI mode, Players automatically signed with black stone and take first turn of the game. In online multiple devices game, the player operate host device automatically signed with black stone and take first turn of the game.
\n\nHow games finish:\nWhen either player placed exactly 5 adjacent stones in the board, either in direction of Horizontal, Vertical or Oblique, this player win the game. note that 6 or more adjacent stones in the board is not the possible win situation.</string>

</resources>
