<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clearwater.gomoku.selection"
    android:background="#ffffbe09"
    android:id="@+id/game_selection">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/size"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp">
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_size_small"
            android:id="@+id/button_small"
            android:textSize="20sp"
            android:checked="true" />
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_size_medium"
            android:id="@+id/button_medium"
            android:textSize="20sp" />
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_size_large"
            android:id="@+id/button_large"
            android:checked="false"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/mode"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="500dp">
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_mode_offline"
            android:id="@+id/button_offline"
            android:checked="true"
            android:textSize="20sp" />
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_mode_ai"
            android:id="@+id/button_ai"
            android:checked="false"
            android:textSize="20sp" />
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_mode_online"
            android:id="@+id/button_online"
            android:checked="false"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/button_start"
        android:id="@+id/button_start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Select board size"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Select game mode"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="450dp" />


</RelativeLayout>
