<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffbe09"
    tools:context="com.clearwater.gomoku.BluetoothPair"
    android:id="@+id/bluetooth_pair">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="If you host, please select:"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/size"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp">
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_size_small"
            android:id="@+id/button_small"
            android:textSize="20sp"
            android:checked="true" />
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_size_medium"
            android:id="@+id/button_medium"
            android:textSize="20sp" />
        <RadioButton
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_size_large"
            android:id="@+id/button_large"
            android:checked="false"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_host"
        android:id="@+id/button_host"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:textSize="30sp"
        android:layout_alignParentEnd="false"
        android:clickable="false" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_join"
        android:id="@+id/button_join"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:clickable="false"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/button_host"
        android:layout_alignLeft="@+id/button_host" />


</RelativeLayout>
